--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome To</h1>
-    <h1>Sumaiya Jannat World!</h1>
+    <h1><span class="orange-color">Sumaiya Jannat</span>World!</h1>
+    <h3>Build Climber and Train Stopper</h3>
+    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero</p>
+    <img src="images/sumu-bg.png" alt="">
+
+
+
 </body>
 </html>
