--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-color">Sumaiya Jannat</span>World!</h1>
+            <h1><span class="orange-color">Sumaiya Jannat</span> World!</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work.
@@ -31,7 +31,24 @@
             <img src="images/sumu-bg.png" alt="">
         </div>
     </section>
+    <section class="dream_big">
 
+        <div class="half_width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half_width">
+
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+
+            <p> I already learned the basic HTML and CSS. I can build any simple website. I can even teach my
+                grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" target="_blank" href=""> Download Resume</a>
+
+        </div>
+    </section>
 
 </body>
 
