--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Sumaiya Jannat</span> World!</h1>
@@ -31,15 +31,15 @@
             <img src="images/sumu-bg.png" alt="">
         </div>
     </section>
-    <section class="dream_big">
+    <section class="dream-big flexible-container">
 
-        <div class="half_width">
-            <img src="images/jhankar2.png" alt="">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
         </div>
-        <div class="half_width">
+        <div class="half-width">
 
-            <h1>Dream Big</h1>
-            <h2>Become a Web Developer</h2>
+            <h2>Dream Big</h2>
+            <h3>Become a Web Developer</h3>
 
             <p> I already learned the basic HTML and CSS. I can build any simple website. I can even teach my
                 grandma
@@ -49,6 +49,31 @@
 
         </div>
     </section>
+    <section class="experience-area">
+        <h2> Experiences</h2>
+        <div class="flexible-container">
+            <div id="full-stack" class="half-width">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-style">2022-present | pro Level developer </h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website
+                    function,efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                    called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div id="baby-stack" class="half-width">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-style">2022-2024 | Programing hero learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+        </div>
+
+    </section>
+    <footer>
+        <p style="text-align: center;">© Sumaiya Jannat 2023, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
